...

class _SingleQuoteViewState extends State<SingleQuoteView> {
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Welcome to LetsQuote!'),
      ),
      body: BlocConsumer<SingleQuoteCubit, SingleQuoteState>(
        listener: (context, state) {
          if (state.status.isInitial) {
            context.read<SingleQuoteCubit>().fetchQuote();
          }
...
                  child: GestureDetector(
                    onTap: () => Navigator.push(
                        context,
                        MaterialPageRoute(
                            builder: (context) => const AllQuotesScreen())),
                    child: const Text(
                      'Explore all quotes',
                      style: TextStyle(
                          color: Colors.blue,
                          decoration: TextDecoration.underline),
                    ),
                  ),
                ),
...
