...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('All Quotes'),
      ),
      body: BlocConsumer<QuotesCubit, QuotesState>(
        listener: (context, state) {
          if (state.status.isInitial) {
            context.read<QuotesCubit>().fetchAllQuote();
          }
...
